--- a/index.html
+++ b/index.html
@@ -14,31 +14,7 @@
     <script src="js/particles.js"></script>
     <!--agregué seguridad con ssh-->
     <header class="container">
-        <!-- subiendo cambios a github  -->
-        <!-- redes sociales -->
-        <!--         
-        <section class="header-icons-container">
-            <div class="icons">
-                <a href="https://www.facebook.com/alex.rio20/" target="_blank"><span class="flaticon-001-facebook"></span></a>
-                <a href="https://twitter.com/julialexes" target="_blank"><span class="flaticon-002-twitter"></span></a>
-                <a href="https://web.whatsapp.com/" target="_blank"><span class=" flaticon-003-whatsapp "></span></a>
-                
-            </div>
-        </section> -->
 
-        <!-- otras paginas -->
-        <!-- <nav>
-            
-            <section class="nav-logo-container ">
-                <img src="assets/img/bass-guitar.png" alt="">
-                <img src="assets/img/laptop.png" alt="">
-                <img src="assets/img/singer.png" alt="">
-                <img src="assets/img/circuit.png" alt="">
-            </section>
-            <section class="profile-link ">
-                <a href="perfil.html " target="_blank">Sobre m&iacute;</a>
-            </section>
-        </nav> -->
 
     </header>
 
@@ -57,7 +33,7 @@
                 </button>
 
             <button class="home-main-button ">
-                    <a href="store.html" target="_blank ">Tienda</a>
+                    <a href="store.html">Tienda</a>
                 </button>
 
             <button class="home-main-button ">
