Coloqué en posición fixed el header y el contenido como relativo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="enlaces">
 
             <button class="home-main-button" id="2">
-                    <a href="perfil.html" target="_blank ">Mi perfil</a>
+                    <a href="perfil.html">Mi perfil</a>
                 </button>
 
             <button class="home-main-button ">
@@ -37,11 +37,11 @@
                 </button>
 
             <button class="home-main-button ">
-                    <a href="blogs.html " target="_blank ">Servicios</a>
+                    <a href="blogs.html">Servicios</a>
                 </button>
 
             <button class="home-main-button ">
-                    <a href="blogs.html " target="_blank ">Mi trabajo</a>
+                    <a href="blogs.html">Mi trabajo</a>
                 </button>
 
         </div>
