--- a/store.html
+++ b/store.html
@@ -230,7 +230,7 @@
                 <div class="titulo">Accesorios para celular</div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
-                    <img src="" alt="">
+                    <img src="assets/img/ArticulosChina/brazalete/1.png" alt="">
                     <a href="">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
@@ -266,7 +266,7 @@
 
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
-                    <img src="assets/img/ArticulosCali/Bateríaportátil/2.png" alt="">
+
                     <!-- <div>
                         <img src="assets/img/ArticulosCali/Bateríaportátil/2.png" alt="">
 
