Juntando las cajas de los accesorios

--- a/store.html
+++ b/store.html
@@ -152,7 +152,7 @@
                     </div>
 
                     <div class="titulo">
-                        <h3>Linux</h3>
+                        <h3>Distribuciones Linux</h3>
                     </div>
                     <div class="linux">
                         <div class="linux-distribuciones">
