Agregué enlace de whatsapp a la etiqueta de enlace lo quiero

--- a/store.html
+++ b/store.html
@@ -231,32 +231,32 @@
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="assets/img/ArticulosChina/brazalete/1.png" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
             </div>
 
@@ -266,37 +266,33 @@
 
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
-
-                    <!-- <div>
-                        <img src="assets/img/ArticulosCali/Bateríaportátil/2.png" alt="">
-
-                    </div> -->
-                    <a href="">Lo quiero</a>
+                    <img src="" alt="">
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="">Lo quiero</a>
+                    <a href="https://web.whatsapp.com/">Lo quiero</a>
                 </div>
 
             </div>
