Cambié el tamaño de fuente de mi correo

--- a/store.html
+++ b/store.html
@@ -128,7 +128,9 @@
         <div class="mi_trabajo">
 
             <div class="formateo">
-
+                <div class="title">
+                    <h3>Sistemas Operativos</h3>
+                </div>
                 <div class="sistemas_operativos">
 
                     <div class="titulo">
@@ -230,33 +232,33 @@
                 <div class="titulo">Accesorios para celular</div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
-                    <img src="assets/img/ArticulosChina/brazalete/1.png" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
             </div>
 
@@ -266,33 +268,34 @@
 
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
                     <img src="" alt="">
-                    <a href="https://web.whatsapp.com/">Lo quiero</a>
+                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
 
             </div>
