--- a/store.html
+++ b/store.html
@@ -16,7 +16,7 @@
 <body>
     <div id="particles-js"></div>
     <!-- animacion con js -->
-    <script src="js/particles.js"></script>
+    <script src="js/particles.min.js"></script>
     <script src="js/app.js"></script>
 
     <header class="header">
