--- a/store.html
+++ b/store.html
@@ -19,6 +19,8 @@
     <script src="js/particles.min.js"></script>
     <script src="js/app.js"></script>
 
+    <i class="icon-menu burger-button"></i>
+
     <header class="header">
 
         <div id="menu-h">
