Se le cambió el tamaño a la vista de los accesorios de presentación en la resolución para celulares y se puso colo de fondo para el body

--- a/store.html
+++ b/store.html
@@ -109,7 +109,8 @@
 
             <div class="preacce p3">
             </div>
-
+            <div class="preacce p4">
+            </div>
             <div class="btn iz">
                 &lt;
             </div>
@@ -209,6 +210,8 @@
 
                         <div class="programas-varios c3">
                         </div>
+
+
 
                         <div class="boton izquierda">
                             &lt;
@@ -319,7 +322,7 @@
 
         $(".dere").click(function() {
             indi++;
-            if (indi > 2) {
+            if (indi > 3) {
                 indi = 0;
             }
             $(".preacce").hide();
@@ -341,7 +344,7 @@
         setInterval(() => {
             indi++;
             // condicional para volver a la imagen 0
-            if (indi > 2) {
+            if (indi > 3) {
                 indi = 0;
             }
             $(".preacce").hide();
@@ -352,7 +355,7 @@
 
         $(".dere").click(function() {
             indi++;
-            if (indi > 2) {
+            if (indi > 3) {
                 indi = 0;
             }
             $(".preacce").hide();
