Arreglando la vista para 1024px

--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
     <main class="home-main ">
 
         <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
-        <!-- <img src="assets/img/guitar1.jpg " alt=" "> -->
 
-        <p class="home-main-text">Bienvenido a mi sitio web</p>
+        <p class="home-main-text">Bienvenidos a mi sitio web</p>
 
-        <!-- dentro de esto voy a poner una area de consejos para el computador -->
         <div class="enlaces">
 
-            <button class="home-main-button" id="2">
+            <button class="home-main-button">
                     <a href="perfil.html">Mi perfil</a>
                 </button>
 
