Quité la clase del body

--- a/index.html
+++ b/index.html
@@ -3,20 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mi Blog</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
 </head>
 
-<body class="home-body">
-    <!-- cambiar -->
-    <script src="js/particles.js"></script>
-    <!--agregué seguridad con ssh-->
-    <header class="container">
-
-
-    </header>
+<body>
 
     <main class="home-main ">
 
@@ -51,8 +44,6 @@
 
         </div>
     </main>
-
-    <footer></footer>
 </body>
 
 </html>
