Dando más tamaño a los elemento del index

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <button class="home-main-button ">
                     <a href="store.html">Tienda</a>
                 </button>
-
+            <!-- 
             <button class="home-main-button ">
                     <a href="blogs.html">Servicios</a>
                 </button>
 
             <button class="home-main-button ">
                     <a href="blogs.html">Mi trabajo</a>
-                </button>
+                </button> -->
 
         </div>
 
