Editando vista de la página del perfil

--- a/perfil.html
+++ b/perfil.html
@@ -17,8 +17,8 @@
         <div class="header1">
             <a href="index.html" class="inicio">Inicio</a>
         </div>
-        <div class="header2">
-            <a href="store.html" class="tienda" target="_blank">Tienda</a>
+        <div class="header1">
+            <a href="store.html" class="inicio">Tienda</a>
         </div>
 
     </header>
@@ -71,20 +71,22 @@
     </main>
 
     <footer>
-        <div class="desarrollador">
+
+        <div class="info-desa">
             <h3>Desarrollado por Juli&aacute;n España</h3>
             <h3>T&eacute;cnico en sistemas </h3>
             <h3><img src="assets/img/sena.png" alt=""></h3>
             <h3>Colón, Putumayo</h3>
         </div>
 
-        <div class="desarrollador">
+        <div class="social-desa">
             <h2>Cont&aacute;ctame:</h2>
             <h3>julii1295@gmail.com</h3>
             <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
             <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/twitter.png" alt=""></a>
-            <!-- <h3><img src="assets/img/phone.png" alt=""> 317-450-3604</h3> -->
+            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt=""></a>
         </div>
+
     </footer>
 </body>
 
