--- a/store.html
+++ b/store.html
@@ -211,8 +211,6 @@
                         <div class="programas-varios c3">
                         </div>
 
-
-
                         <div class="boton izquierda">
                             &lt;
                         </div>
@@ -232,12 +230,38 @@
         </div>
 
         <div class="accesorios">
+            <div class="titulo">
+                <h2>Accesorios para celulares</h2>
+            </div>
             <div class="celulares">
-                <div class="titulo">Accesorios para celular</div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
                     <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
                     <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                    <!--                         
+                    <div class="preacce a1">
+                    </div>
+
+                    <div class="preacce a2">
+                    </div>
+
+                    <div class="preacce a3">
+                    </div>
+
+                    <div class="btn iz">
+                        &lt;
+                    </div>
+
+                    <div class="btn dere">
+                        &gt;
+                    </div>
+
+                    <ul class="page">
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ul> -->
+
                 </div>
                 <div class="accesorio-celular">
                     <h3>accesorios</h3>
@@ -266,13 +290,13 @@
                 </div>
             </div>
 
+            <div class="titulo-computadores">
+                <h2>Accesorios para computadores</h2>
+            </div>
             <div class="pc">
-
-                <div class="titulo">Accesorios para computadores</div>
 
                 <div class="accesorio-pc">
                     <h3>accesorios</h3>
-                    <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                     <img src="" alt="">
                     <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
                 </div>
