Colocando espacio para bienvenida

--- a/perfil.html
+++ b/perfil.html
@@ -26,8 +26,8 @@
     <main class="contenido">
 
         <div class="presentacion">
-            <div>
-                <img src="assets/img/Desarrollador.jpg" alt="">
+            <div class="img">
+                <img class="img-photo" src="assets/img/Desarrollador.jpg" alt="">
             </div>
             <div>
                 <h2>Hola, soy Juli&aacute;n</h2>
