--- a/store.html
+++ b/store.html
@@ -99,6 +99,11 @@
 
     <main class="contenido">
 
+        <div class="slide-bienvenida">
+            <h1>
+                Bienvenidos a mi tienda
+            </h1>
+        </div>
         <div class="presentacion">
 
             <div class="preacce p1">
