--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="enlaces">
 
             <button class="home-main-button">
-                    <a href="perfil.html">Mi perfil</a>
+                    <a href="perfil.html">Acerca de mi</a>
                 </button>
 
             <button class="home-main-button ">
