Puesto la presentación a la tienda

--- a/store.html
+++ b/store.html
@@ -99,10 +99,34 @@
 
     <main class="contenido">
 
-        <div class="slide-bienvenida">
-            <h1>
-                Bienvenidos a mi tienda
-            </h1>
+        <div class="container">
+            <ul class="slider">
+                <li id="slide1">
+                    <h2>
+                        Bienvenidos a mi tienda
+                    </h2>
+                </li>
+                <li id="slide2">
+                    <img src="assets/img/Otros artículos/CargadorMotorla/4.png" alt="">
+                </li>
+                <li id="slide3">
+                    <img src="assets/img/Otros artículos/CargadorMotorla/3.png" alt="">
+                </li>
+            </ul>
+
+            <!-- numeracion -->
+
+            <ul class="menu">
+                <li>
+                    <a href="#slide1">1</a>
+                </li>
+                <li>
+                    <a href="#slide2">2</a>
+                </li>
+                <li>
+                    <a href="#slide3">3</a>
+                </li>
+            </ul>
         </div>
         <div class="presentacion">
 
