--- a/perfil.html
+++ b/perfil.html
@@ -29,7 +29,7 @@
             <div class="img">
                 <img class="img-photo" src="assets/img/Desarrollador.jpg" alt="">
             </div>
-            <div>
+            <div class="descripcion">
                 <h2>Hola, soy Juli&aacute;n</h2>
                 <p>
                     Desde niño me a gustado tocar guitarra, tambi&eacute;n me dedico a leer porque me gusta enterarme de los hechos que han marcado la actualidad. <br>Espero sea de su agrado mi sitio 😉
