Editando la presentación, footer del perfil

--- a/perfil.html
+++ b/perfil.html
@@ -39,7 +39,9 @@
 
 
         <div class="tiempo">
-            <h2>¿A qu&eacute; me dedico?</h2>
+            <div class="tiempo-titulo">
+                <h2>¿A qu&eacute; me dedico?</h2>
+            </div>
             <div class="tiempo-dividido">
                 <article class="actividades">
                     <h4>Trabajo</h4>
