Aumentando tamaño de elementos en vista móvil

--- a/perfil.html
+++ b/perfil.html
@@ -52,19 +52,19 @@
                 <article class="actividades">
                     <h4>Estudiar</h4>
                     <p>
-                        Por el momento estoy estudiando una tecnolog&iacute;a en el SENA; espero volver pronto a la Universidad
+                        "Nunca consideres el estudio como una obligación, sino como una oportunidad para penetrar en el bello y maravilloso mundo del saber". Albert Einstein
                     </p>
                 </article>
                 <article class="actividades">
                     <h4>Gustos</h4>
                     <p>
-                        Respecto a mis gustos musicales mi preferido es el Rock, pero escucho de todo un poco
+                        Me gusta tocar guitarra, además, es el momento en el que mi mente se aleja de toda preocupaci&oacute;n
                     </p>
                 </article>
                 <article class="actividades">
                     <h4>Hobbies</h4>
                     <p>
-                        Me gusta emplear el tiempo en educarme en programaci&oacute;n y otros temas de ingenier&iacute;a. Tambi&eacute;n me gusta tocar guitarra
+                        Me gusta emplear el tiempo en educarme en programaci&oacute;n y otros temas de ingenier&iacute;a
                     </p>
                 </article>
             </div>
