Otra vez corrigiendo la página del perfil

--- a/perfil.html
+++ b/perfil.html
@@ -32,7 +32,7 @@
             <div class="descripcion">
                 <h2>Hola, soy Juli&aacute;n</h2>
                 <p>
-                    Desde niño me a gustado tocar guitarra, tambi&eacute;n me dedico a leer porque me gusta enterarme de los hechos que han marcado la actualidad. <br>Espero sea de su agrado mi sitio 😉
+                    Desde niño me ha gustado tocar guitarra, tambi&eacute;n me dedico a leer porque me gusta enterarme de los hechos que han marcado la actualidad. <br>Espero sea de su agrado mi sitio 😉
                 </p>
             </div>
         </div>
