Cambié texto de Lo quiero a Comprar en los accesorios para celulares

--- a/store.html
+++ b/store.html
@@ -133,32 +133,27 @@
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
                         <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
-                        <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
-                        <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
-                        <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
-                        <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
-                    </div>
-                    <div class="accesorio-celular">
-                        <h3>accesorios</h3>
-                        <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                 </div>
 
