Dando diseño a toda la página

--- a/store.html
+++ b/store.html
@@ -165,32 +165,32 @@
                     <div class="accesorio-pc">
                         <h3>accesorios</h3>
                         <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>accesorios</h3>
                         <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>accesorios</h3>
                         <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>accesorios</h3>
                         <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>accesorios</h3>
                         <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>accesorios</h3>
                         <img src="" alt="">
-                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Lo quiero</a>
+                        <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
 
                 </div>
