Cambiando diseño de botones para comprar y botones de la presentación

--- a/store.html
+++ b/store.html
@@ -131,9 +131,10 @@
                 </div>
                 <div class="celulares">
                     <div class="accesorio-celular">
-                        <h3>accesorios</h3>
-                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                        <h3>Antena TP-Link USB wifi</h3>
+                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
+
                     </div>
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
@@ -142,7 +143,7 @@
                     </div>
                     <div class="accesorio-celular">
                         <h3>accesorios</h3>
-                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/3.png" alt="">
+                        <img src="assets/img/ArticulosCali/Bateríaportátil/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
@@ -301,12 +302,12 @@
 
         var indi = 0;
 
-        $(".page li").eq(indi).css("background-color", "orange");
+        $(".page li").eq(indi).css("background-color", "#419CCA");
 
         $(".page li").click(function() {
             indi = $(this).index();
-            $(".page li").css("background-color", "yellow");
-            $(this).css("background-color", "orange");
+            $(".page li").css("background-color", "#bababa");
+            $(this).css("background-color", "#419CCA");
             $(".preacce").hide();
             $(".preacce").eq(indi).fadeIn();
         });
@@ -318,8 +319,8 @@
             }
             $(".preacce").hide();
             $(".preacce").eq(indi).fadeIn();
-            $(".page li").css("background-color", "yellow");
-            $(".page li").eq(indi).css("background-color", "orange");
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
         });
         $(".iz").click(function() {
             indi--;
@@ -328,8 +329,8 @@
             }
             $(".preacce").hide();
             $(".preacce").eq(indi).fadeIn();
-            $(".page li").css("background-color", "yellow");
-            $(".page li").eq(indi).css("background-color", "orange");
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
         });
 
         setInterval(() => {
@@ -340,8 +341,8 @@
             }
             $(".preacce").hide();
             $(".preacce").eq(indi).fadeIn();
-            $(".page li").css("background-color", "yellow");
-            $(".page li").eq(indi).css("background-color", "orange");
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
         }, 4000);
 
         $(".dere").click(function() {
@@ -351,8 +352,8 @@
             }
             $(".preacce").hide();
             $(".preacce").eq(indi).fadeIn();
-            $(".page li").css("background-color", "yellow");
-            $(".page li").eq(indi).css("background-color", "orange");
+            $(".page li").css("background-color", "#bababa");
+            $(".page li").eq(indi).css("background-color", "#419CCA");
         });
 
         $(".iz").click(function() {
