--- a/perfil.html
+++ b/perfil.html
@@ -11,6 +11,10 @@
 
 <body>
 
+    <div id="particles-js"></div>
+    <script src="js/particles.min.js"></script>
+    <script src="js/app.js"></script>
+
     <header class="contenedor-header">
 
         <div class="header1">
