--- a/index.html
+++ b/index.html
@@ -19,21 +19,18 @@
 
         <div class="enlaces">
 
+            <button>
+                <img class="arrow" src="assets/img/arrow-down.png" alt="">
+            </button>
+            <!--             
             <button class="home-main-button">
                     <a href="perfil.html">Acerca de mi</a>
                 </button>
 
             <button class="home-main-button ">
                     <a href="store.html">Tienda</a>
-                </button>
-            <!-- 
-            <button class="home-main-button ">
-                    <a href="blogs.html">Servicios</a>
-                </button>
-
-            <button class="home-main-button ">
-                    <a href="blogs.html">Mi trabajo</a>
                 </button> -->
+
 
         </div>
 
