Cambiando diseño del index

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
         <div class="enlaces">
 
-            <button>
-                <img class="arrow" src="assets/img/arrow-down.png" alt="">
-            </button>
-            <!--             
+            <!-- <button class="arrow">
+                <img src="assets/img/arrow-down.png" alt="">
+            </button> -->
+
             <button class="home-main-button">
                     <a href="perfil.html">Acerca de mi</a>
                 </button>
 
             <button class="home-main-button ">
                     <a href="store.html">Tienda</a>
-                </button> -->
+                </button>
 
 
         </div>
