--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <main class="home-main ">
 
-        <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
+        <div class="img">
+            <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
+        </div>
 
         <p class="home-main-text">Bienvenidos a mi sitio web</p>
 
