Poniendo hover al título de la página inicial

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
         </div>
 
-        <p class="home-main-text">Bienvenidos a mi sitio web</p>
+        <div class="home-main-text">
+            <p>Bienvenidos a mi sitio web</p>
+        </div>
+
 
         <div class="enlaces">
 
