Agregando espacio entre enlaces de redes

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
 
         <div class="desarrollador">
 
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="" title="Contáctame al Whatsapp"></a>
+            <a href="https://www.facebook.com/alex.rio20/" target="_blank">
+                <img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook">
+            </a>
+            <a href="https://wa.me/c/573174503604">
+                <img src="assets/img/whatsapp.png" alt="" title="Contáctame por Whatsapp">
+            </a>
 
         </div>
     </main>
