Organizando accesorios en vista 768px

--- a/store.html
+++ b/store.html
@@ -107,12 +107,12 @@
             <div class="preacce p3">
             </div>
 
-            <div class="btn iz">
+            <!-- <div class="btn iz">
                 &lt;
             </div>
             <div class="btn dere">
                 &gt;
-            </div>
+            </div> -->
 
             <ul class="page">
                 <li></li>
