--- a/store.html
+++ b/store.html
@@ -230,7 +230,7 @@
                     </div>
                 </div>
             </div>
-            <div class="formateo">
+            <div class="formateo" id="formateo">
                 <div class="title">
                     <h2>Sistemas Operativos</h2>
                 </div>
