Dando más tamaño a los elementos en 768px

--- a/perfil.html
+++ b/perfil.html
@@ -49,7 +49,7 @@
                 <article class="actividades">
                     <h4>Trabajo</h4>
                     <p>
-                        Soy T&eacute;cnico en sistemas y no considero como trabajo reparar o actualizar los computadores, para m&iacute; es un aprendizaje.
+                        Trabajo como t&eacute;cnico en sistemas y desarrollador web. Me gusta reparar computadores y a&uacute;n m&aacute;s crear tu página web 😎
                     </p>
                 </article>
                 <article class="actividades">
