Ajustando tamaño en index 1024px

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="enlaces">
 
             <div class="home-main-button">
-                <a href="perfil.html">Acerca de mi</a>
+                <a href="perfil.html">Mi perfil</a>
             </div>
 
             <div class="home-main-button ">
