--- a/store.html
+++ b/store.html
@@ -311,20 +311,20 @@
 
                         <div class="programas-varios c3">
                         </div>
-
+                        <!-- 
                         <div class="boton izquierda">
                             &lt;
                         </div>
 
                         <div class="boton derecha">
                             &gt;
-                        </div>
-                        <!-- 
+                        </div> -->
+
                         <ul class="paginacion">
                             <li>1</li>
                             <li>2</li>
                             <li>3</li>
-                        </ul> -->
+                        </ul>
                     </div>
                 </div>
             </div>
