--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://www.facebook.com/alex.rio20/" target="_blank">
                 <img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook">
             </a>
-            <a href="https://wa.me/c/573174503604">
+            <a href="https://wa.me/c/573174503604" target="_blank">
                 <img src="assets/img/whatsapp.png" alt="" title="Contáctame por Whatsapp">
             </a>
 
