No sé qué hice jajaja

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
         </div>
-
+        <!-- 
         <div class="desarrollador">
 
             <a href="https://www.facebook.com/alex.rio20/" target="_blank">
@@ -42,7 +42,7 @@
                 <img src="assets/img/whatsapp.png" alt="" title="Contáctame por Whatsapp">
             </a>
 
-        </div>
+        </div> -->
     </main>
 </body>
 
