--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main--movil.css" media="(max-width: 425px)">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
 </head>
