--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/main--movil.css" media="(max-width: 425px)">
+    <link rel="stylesheet" href="media__queries/media-425.css" media="(max-width: 425px)">
+    <link rel="stylesheet" href="media__queries/media-768.css" media="(max-width: 768px)">
+    <link rel="stylesheet" href="media__queries/media-1024.css" media="(max-width: 1024px)">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
 </head>
