Cambié el diseño de los elementos diviendo la pantalla para mi foto y los enlaces para las demás páginas

--- a/index.html
+++ b/index.html
@@ -16,36 +16,33 @@
 
     <main class="home-main ">
 
-        <div class="img">
-            <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
-        </div>
+        <div class="inicio">
 
-        <div class="home-main-text">
-            <p>Bienvenidos a mi sitio web</p>
-        </div>
-
-        <div class="enlaces">
-
-            <div class="home-main-button">
-                <a href="perfil.html">Mi perfil</a>
+            <div class="img">
+                <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
             </div>
 
-            <div class="home-main-button ">
-                <a href="store.html">Tienda</a>
+            <div class="home-main-text">
+                <p>Bienvenidos a mi sitio web</p>
             </div>
 
+            <div class="enlaces">
+
+                <div class="home-main-button">
+                    <a href="perfil.html">Mi perfil</a>
+                </div>
+
+                <div class="home-main-button ">
+                    <a href="store.html">Tienda</a>
+                </div>
+
+            </div>
         </div>
-        <!-- 
-        <div class="desarrollador">
 
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank">
-                <img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook">
-            </a>
-            <a href="https://wa.me/c/573174503604" target="_blank">
-                <img src="assets/img/whatsapp.png" alt="" title="Contáctame por Whatsapp">
-            </a>
+        <div class="my_photo">
+            <img src="assets/img/Desarrollador.jpg" alt="">
+        </div>
 
-        </div> -->
     </main>
 </body>
 
