Dando diseño a la nueva estructura

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="home-main-text">
-                <p>Bienvenidos a mi sitio web</p>
+                <p>Bienvenidos a </p>
             </div>
 
             <div class="enlaces">
